Adding normalize.css and angular to jade

--- a/views/app.jade
+++ b/views/app.jade
@@ -4,7 +4,9 @@ html(lang="en")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Fixie
+    link(rel="stylesheet", href="/css/normalize.css")
     link(rel="stylesheet", href="/css/main.css")
   body(data-ng-app="app", data-ng-controller="AppCtrl")
     div.view(data-ng-view)
+    script(src="/js/angular.js")
     script(src="/js/app.js")
