--- a/views/app.jade
+++ b/views/app.jade
@@ -6,7 +6,7 @@ html(lang="en")
     title Fixie
     link(rel="stylesheet", href="/css/normalize.css")
     link(rel="stylesheet", href="/css/main.css")
-  body(data-ng-app="app", data-ng-controller="AppCtrl")
+  body(data-ng-app="app")
     div.view(data-ng-view)
     script(src="/js/angular.js")
     script(src="/js/app.js")
