Google Maps up in here!

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -43,8 +43,8 @@ html, body {
     }
     .question-box-options {
       input[type="text"] {
-        font-size: rem-calc(20);
-        padding: rem-calc(24) rem-calc(20);
+        //font-size: rem-calc(20);
+        //padding: rem-calc(24) rem-calc(20);
       }
       button:last-child {
         margin-bottom: 0;
