--- a/views/app.jade
+++ b/views/app.jade
@@ -10,5 +10,6 @@ html(lang="en")
     header.shadow(data-ng-controller="HeaderCtrl as hdr")
       a.logo(href="/") FIXIE
     div.view(data-ng-view)
-    script(src="/js/angular.js")
+    script(src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places")
+    script(src="/js/libs.js")
     script(src="/js/app.js")
