--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -544,6 +544,7 @@ $secondary-color: darken(#A3BFA4, 10%);
 // $input-font-family: inherit;
 // $input-font-color: rgba(0,0,0,0.75);
 // $input-font-size: rem-calc(14);
+$input-font-size: rem-calc(20);
 // $input-bg-color: #fff;
 // $input-focus-bg-color: scale-color(#fff, $lightness: -2%);
 // $input-border-color: scale-color(#fff, $lightness: -20%);
