--- a/src/scss/_fx-arrow.scss
+++ b/src/scss/_fx-arrow.scss
@@ -1,16 +1,27 @@
 .fx-arrow {
   @include single-transition();
   cursor: pointer;
+  display: none;
   height: 140px;
   opacity: 0.3;
+  position: absolute;
+  top: 40%;
   width: 140px;
   &.back {
     background-image: url(/img/arrow-left.png);
+    left: 0;
   }
   &.foward {
     background-image: url(/img/arrow-right.png);
+    right: 0;
   }
   &:hover {
     opacity: 0.7;
+  }
+}
+
+@media #{$medium-up} {
+  .fx-arrow {
+    display: block;
   }
 }
