--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -2,89 +2,41 @@ html, body {
   background: $body-bg url(/img/pattern.png) repeat top left;
 }
 
+header {
+  background: $body-bg;
+  padding: rem-calc(16) rem-calc(20) rem-calc(10) rem-calc(20);
+  text-align: center;
+  .logo {
+    @include single-transition();
+    color: $primary-color;
+    font-family: 'Chango', sans-serif;
+    font-size: rem-calc(40);
+    margin: 0;
+    &:visited {
+      color: $primary-color;
+    }
+    &:hover {
+      color: darken($primary-color, 10%);
+    }
+  }
+}
+
+.animate {
+  @include single-transition(opacity);
+  opacity: 1;
+  &.ng-hide {
+    opacity: 0;
+  }
+}
+
 .shadow {
   -webkit-box-shadow: 0 0 rem-calc(15) 0 rgba(52, 52, 52, 0.2);
   box-shadow: 0 0 rem-calc(15) 0 rgba(52, 52, 52, 0.2);
 }
 
-.rel-wrp {
-  position: relative;
-}
-
-.question-box-wrp {
-  margin: rem-calc(40) auto;
-  position: relative;
-  width: 100%;
-  .question-box-arrow {
-    display: none;
-    position: absolute;
-    top: rem-calc(50);
-    z-index: 1;
-    &[data-direction="back"] {
-      left: 0;
-    }
-    &[data-direction="forward"] {
-      right: 0;
-    }
-  }
-  .question-box {
-    background: $body-bg;
-    margin: 0 auto;
-    padding: rem-calc(20) rem-calc(30);
-    position: relative;
-    width: 95%;
-    z-index: 5;
-    .question-box-label {
-      color: $primary-color;
-      font-size: rem-calc(24);
-      font-weight: bold;
-      margin: 0 0 rem-calc(16) 0;
-      text-align: center;
-    }
-    .question-box-options {
-      input[type="text"] {
-        //font-size: rem-calc(20);
-        //padding: rem-calc(24) rem-calc(20);
-      }
-      button:last-child {
-        margin-bottom: 0;
-      }
-    }
-    hr {
-      border: solid $primary-color;
-      border-width: rem-calc(1) 0 0;
-    }
-    .button-group {
-      width: 100%;
-      li {
-        .button {
-          margin: 0;
-          width: 100%;
-        }
-      }
-      &.button-group-2 {
-        li {
-          width: 50%;
-        }
-      }
-      &.button-group-3 {
-        li {
-          width: 33.3333%;
-        }
-      }
-    }
-  }
-}
-
 @media #{$medium-up} {
-  .question-box-wrp {
-    width: 780px;
-    .question-box-arrow {
-      display: block;
-    }
-    .question-box {
-      padding: rem-calc(30) rem-calc(40);
-      width: rem-calc(500);
-    }
+  header {
+    text-align: left;
   }
 }
+
