--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,7 +40,7 @@
 //   "foundation/components/offcanvas",
    "foundation/components/visibility";
 
-@import "general",
-  "controllers/header-ctrl",
-  "controllers/points-ctrl",
-  "directives/fx-arrow";
+@import 
+  "general",
+  "question-box",
+  "fx-arrow";
