--- a/views/app.jade
+++ b/views/app.jade
@@ -7,7 +7,7 @@ html(lang="en")
     link(rel="stylesheet", href="/css/normalize.css")
     link(rel="stylesheet", href="/css/main.css")
   body(data-ng-app="app")
-    header.shadow(data-ng-controller="HeaderCtrl as hdr")
+    header.shadow
       a.logo(href="/") FIXIE
     div.view(data-ng-view)
     script(src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places")
