--- a/views/templates/details.jade
+++ b/views/templates/details.jade
@@ -59,4 +59,4 @@ div#details-ctrl(data-ng-controller="DetailsCtrl as details")
                 select(data-ng-model="details.trip.arrival.ampm")
                   option(value="am") am
                   option(value="pm") pm
-          input.button.primary.expand(type="submit", value="Go!")
+          input.button.primary.expand(type="submit", value="Compare Routes")
