--- a/views/templates/purpose.jade
+++ b/views/templates/purpose.jade
@@ -10,4 +10,4 @@ div#purpose-ctrl(data-ng-controller="PurposeCtrl as purpose")
       li
         a.button.secondary(href="/sample") Sample Trip
       li
-        a.button.secondary(href="/points") Skip
+        a.button.secondary(href="/details") Skip
